feat: add favicon.svg for website branding

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="refresh" content="0; url=https://ytingwu.github.io/shopee-fee/">
     <link rel="canonical" href="https://ytingwu.github.io/shopee-fee/">
     <title>Redirecting...</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 </head>
 <body>
     正在前往 Shopee Fee 計算機... 如果沒有跳轉，請<a href="https://ytingwu.github.io/shopee-fee/">點擊這裡</a>。
