--- a/boxcam/index.html
+++ b/boxcam/index.html
@@ -427,7 +427,7 @@
                     <span class="text-xl font-bold text-slate-900 dark:text-white">BoxCam</span>
                 </div>
                 <div class="flex space-x-6">
-                    <a href="/privacy" class="text-slate-500 hover:text-slate-900 dark:hover:text-white transition-colors">隱私權政策</a>
+                    <a href="/boxcam/privacy" class="text-slate-500 hover:text-slate-900 dark:hover:text-white transition-colors">隱私權政策</a>
                     <a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/" class="text-slate-500 hover:text-slate-900 dark:hover:text-white transition-colors">使用條款</a>
                     <a href="https://www.instagram.com/boxcamapp" class="text-slate-500 hover:text-slate-900 dark:hover:text-white transition-colors">聯絡我們</a>
                 </div>
