--- a/boxcam/index.html
+++ b/boxcam/index.html
@@ -221,11 +221,11 @@
                                 <p class="text-slate-400 text-sm font-medium">BoxCam</p>
                                 <p class="text-slate-500 text-xs mt-2">請在此放入<br>App 主畫面截圖</p>
                                 <!-- Example of where image goes: -->
-                                <!-- <img src="your-screenshot-1.png" class="absolute inset-0 w-full h-full object-cover" alt="App Screen"> -->
+                                <img src="home.png" class="absolute inset-0 w-full h-full object-cover" alt="App Screen">
                             </div>
 
                             <!-- Fake UI Elements for visualization if no image -->
-                            <div class="absolute top-0 w-full h-8 bg-black/10 backdrop-blur-sm z-20 flex justify-between px-6 items-center">
+                            <!-- <div class="absolute top-0 w-full h-8 bg-black/10 backdrop-blur-sm z-20 flex justify-between px-6 items-center"> -->
                                 <div class="text-[10px] font-bold">9:41</div>
                                 <div class="flex gap-1"><i class="fas fa-signal text-[10px]"></i> <i class="fas fa-wifi text-[10px]"></i> <i class="fas fa-battery-full text-[10px]"></i></div>
                             </div>
