chore: remove redundant code blocks
Cleaned up the codebase by eliminating unnecessary code segments that were not contributing to functionality.

--- a/boxcam/index.html
+++ b/boxcam/index.html
@@ -94,7 +94,7 @@
                 <!-- Logo -->
                 <div class="flex-shrink-0 flex items-center gap-3 cursor-pointer" onclick="window.scrollTo(0,0)">
                     <!-- Placeholder for Logo - Replace src with actual path -->
-                    <img src="boxcamlogo.png" alt="BoxCam Logo" class="h-10 w-10 object-contain rounded-xl shadow-sm" onerror="this.onerror=null; this.src='https://placehold.co/100x100/2563eb/white?text=B';">
+                    <img src="LaunchLogo.png" alt="BoxCam Logo" class="h-10 w-10 object-contain rounded-xl shadow-sm" onerror="this.onerror=null; this.src='https://placehold.co/100x100/2563eb/white?text=B';">
                     <span class="font-bold text-xl tracking-tight text-slate-900 dark:text-white">BoxCam <span class="hidden sm:inline-block font-medium text-slate-500 text-sm ml-1">包裹相機</span></span>
                 </div>
 
@@ -423,7 +423,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row justify-between items-center mb-8">
                 <div class="flex items-center gap-2 mb-4 md:mb-0">
-                    <img src="boxcamlogo.png" alt="BoxCam" class="h-8 w-8 rounded-lg" onerror="this.onerror=null; this.src='https://placehold.co/100x100/2563eb/white?text=B';">
+                    <img src="LaunchLogo.png" alt="BoxCam" class="h-8 w-8 rounded-lg" onerror="this.onerror=null; this.src='https://placehold.co/100x100/2563eb/white?text=B';">
                     <span class="text-xl font-bold text-slate-900 dark:text-white">BoxCam</span>
                 </div>
                 <div class="flex space-x-6">
