chore: remove redundant code changes
Cleaned up the codebase by eliminating unnecessary code changes that do not contribute to functionality or performance.

--- a/boxcam/index.html
+++ b/boxcam/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="BoxCam 是專為電商賣家與網購族設計的錄影存證工具。掃碼自動錄影、智慧檔案管理、資料隱私自主。">
     <meta name="keywords" content="出貨錄影,包裹相機,電商工具,網購存證,BoxCam,包裹錄影,隱私保護,掃碼錄影,影片存證,交易保障">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="LaunchLogo.svg">
+    <link rel="apple-touch-icon" href="LaunchLogo.svg">
+
     <!-- Google Fonts: Noto Sans TC for Traditional Chinese -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
