--- a/boxcam/index.html
+++ b/boxcam/index.html
@@ -140,7 +140,7 @@
                         <i class="fas fa-moon text-slate-500 block dark:hidden"></i>
                     </button>
 
-                    <a href="https://apps.apple.com/tw/app/boxcam-%E5%8C%85%E8%A3%B9%E7%9B%B8%E6%A9%9F/id6757115855" target="_blank" class="bg-primary-600 hover:bg-primary-700 text-white px-5 py-2 rounded-full text-sm font-medium transition-all shadow-lg shadow-primary-500/30 transform hover:-translate-y-0.5">
+                    <a href="https://apps.apple.com/tw/app/boxcam-%E5%8C%85%E8%A3%B9%E7%9B%B8%E6%A9%9F/id6757115855" data-i18n="nav.download" target="_blank" class="bg-primary-600 hover:bg-primary-700 text-white px-5 py-2 rounded-full text-sm font-medium transition-all shadow-lg shadow-primary-500/30 transform hover:-translate-y-0.5">
                         <i class="fab fa-apple mr-2"></i>下載 App
                     </a>
                 </div>
