feat(sitemap): add multi-language support and Open Graph tags

--- a/boxcam/index.html
+++ b/boxcam/index.html
@@ -7,6 +7,92 @@
     <meta name="description" content="BoxCam 是專為電商賣家與網購族設計的錄影存證工具。掃碼自動錄影、智慧檔案管理、資料隱私自主。">
     <meta name="keywords" content="出貨錄影,包裹相機,電商工具,網購存證,BoxCam,包裹錄影,隱私保護,掃碼錄影,影片存證,交易保障">
 
+    <!-- Hreflang Tags for Multi-language SEO -->
+    <link rel="alternate" hreflang="zh-TW" href="https://ytingwu.github.io/boxcam/?lang=zh-TW" />
+    <link rel="alternate" hreflang="zh-CN" href="https://ytingwu.github.io/boxcam/?lang=zh-CN" />
+    <link rel="alternate" hreflang="en" href="https://ytingwu.github.io/boxcam/?lang=en" />
+    <link rel="alternate" hreflang="ja" href="https://ytingwu.github.io/boxcam/?lang=ja" />
+    <link rel="alternate" hreflang="ko" href="https://ytingwu.github.io/boxcam/?lang=ko" />
+    <link rel="alternate" hreflang="x-default" href="https://ytingwu.github.io/boxcam/" />
+
+    <!-- Open Graph Tags for Social Sharing -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ytingwu.github.io/boxcam/">
+    <meta property="og:title" content="BoxCam - 包裹相機">
+    <meta property="og:description" content="BoxCam 是專為電商賣家與網購族設計的錄影存證工具。掃碼自動錄影、智慧檔案管理、資料隱私自主。">
+    <meta property="og:image" content="https://ytingwu.github.io/boxcam/LaunchLogo.png">
+    <meta property="og:site_name" content="BoxCam">
+    <meta property="og:locale" content="zh_TW">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="BoxCam - 包裹相機">
+    <meta name="twitter:description" content="BoxCam 是專為電商賣家與網購族設計的錄影存證工具。掃碼自動錄影、智慧檔案管理、資料隱私自主。">
+    <meta name="twitter:image" content="https://ytingwu.github.io/boxcam/LaunchLogo.png">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebSite",
+          "@id": "https://ytingwu.github.io/boxcam/#website",
+          "url": "https://ytingwu.github.io/boxcam/",
+          "name": "BoxCam - 包裹相機",
+          "description": "BoxCam 是專為電商賣家與網購族設計的錄影存證工具。掃碼自動錄影、智慧檔案管理、資料隱私自主。",
+          "inLanguage": ["zh-TW", "zh-CN", "en", "ja", "ko"]
+        },
+        {
+          "@type": "SoftwareApplication",
+          "@id": "https://ytingwu.github.io/boxcam/#app",
+          "name": "BoxCam",
+          "alternateName": "包裹相機",
+          "applicationCategory": "BusinessApplication",
+          "operatingSystem": "iOS",
+          "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "TWD"
+          },
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5.0",
+            "ratingCount": "1"
+          },
+          "downloadUrl": "https://apps.apple.com/tw/app/boxcam-%E5%8C%85%E8%A3%B9%E7%9B%B8%E6%A9%9F/id6757115855",
+          "screenshot": "https://ytingwu.github.io/boxcam/LaunchLogo.png",
+          "description": "專為電商與網購打造。透過「掃碼、錄影、存證」簡易流程,完整保存每一筆交易真相。告別惡意缺件申訴與毀損爭議。",
+          "featureList": [
+            "掃碼自動錄影",
+            "智慧檔案管理",
+            "本地儲存無個資上傳",
+            "支援 iCloud",
+            "多賣場管理",
+            "秒級搜尋舉證"
+          ],
+          "softwareVersion": "1.0",
+          "datePublished": "2025-01-15"
+        },
+        {
+          "@type": "Organization",
+          "@id": "https://ytingwu.github.io/#organization",
+          "name": "BoxCam",
+          "url": "https://ytingwu.github.io/boxcam/",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://ytingwu.github.io/boxcam/LaunchLogo.png"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "contactType": "Customer Service",
+            "url": "https://www.instagram.com/boxcamapp"
+          }
+        }
+      ]
+    }
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="LaunchLogo.svg">
     <link rel="apple-touch-icon" href="LaunchLogo.svg">
@@ -497,6 +583,10 @@
         // ========== Multi-Language Support ==========
         const translations = {
             'zh-TW': {
+                'meta.description': 'BoxCam 是專為電商賣家與網購族設計的錄影存證工具。掃碼自動錄影、智慧檔案管理、資料隱私自主。',
+                'meta.keywords': '出貨錄影,包裹相機,電商工具,網購存證,BoxCam,包裹錄影,隱私保護,掃碼錄影,影片存證,交易保障',
+                'meta.title': 'BoxCam - 包裹相機',
+                'meta.og_locale': 'zh_TW',
                 'app.subtitle': '包裹相機',
                 'nav.features': '核心功能',
                 'nav.audience': '適用對象',
@@ -547,6 +637,10 @@
                 'footer.contact': '聯絡我們',
             },
             'zh-CN': {
+                'meta.description': 'BoxCam 是专为电商卖家与网购族设计的录影存证工具。扫码自动录影、智慧档案管理、资料隐私自主。',
+                'meta.keywords': '出货录影,包裹相机,电商工具,网购存证,BoxCam,包裹录影,隐私保护,扫码录影,影片存证,交易保障',
+                'meta.title': 'BoxCam - 包裹相机',
+                'meta.og_locale': 'zh_CN',
                 'app.subtitle': '包裹相机',
                 'nav.features': '核心功能',
                 'nav.audience': '适用对象',
@@ -597,6 +691,10 @@
                 'footer.contact': '联络我们',
             },
             'en': {
+                'meta.description': 'BoxCam is a video evidence tool designed for e-commerce sellers and online shoppers. Auto-record with barcode scanning, smart file management, and complete data privacy.',
+                'meta.keywords': 'shipping video,package camera,e-commerce tool,online shopping evidence,BoxCam,package recording,privacy protection,barcode recording,video evidence,transaction security',
+                'meta.title': 'BoxCam - Package Camera',
+                'meta.og_locale': 'en_US',
                 'app.subtitle': 'Package Camera',
                 'nav.features': 'Features',
                 'nav.audience': 'For Whom',
@@ -647,6 +745,10 @@
                 'footer.contact': 'Contact Us',
             },
             'ja': {
+                'meta.description': 'BoxCamはEC事業者とオンラインショッパー向けに設計された録画証拠ツール。バーコードスキャンで自動録画、スマートファイル管理、完全なデータプライバシー。',
+                'meta.keywords': '出荷録画,パッケージカメラ,ECツール,オンラインショッピング証拠,BoxCam,パッケージ録画,プライバシー保護,バーコード録画,ビデオ証拠,取引保障',
+                'meta.title': 'BoxCam - パッケージカメラ',
+                'meta.og_locale': 'ja_JP',
                 'app.subtitle': 'パッケージカメラ',
                 'nav.features': 'コア機能',
                 'nav.audience': '対象ユーザー',
@@ -697,6 +799,10 @@
                 'footer.contact': 'お問い合わせ',
             },
             'ko': {
+                'meta.description': 'BoxCam은 전자상거래 판매자와 온라인 쇼핑객을 위해 설계된 영상 증거 도구입니다. 바코드 스캔으로 자동 녹화, 스마트 파일 관리, 완벽한 데이터 프라이버시.',
+                'meta.keywords': '배송 녹화,패키지 카메라,전자상거래 도구,온라인 쇼핑 증거,BoxCam,패키지 녹화,개인정보 보호,바코드 녹화,영상 증거,거래 보안',
+                'meta.title': 'BoxCam - 패키지 카메라',
+                'meta.og_locale': 'ko_KR',
                 'app.subtitle': '패키지 카메라',
                 'nav.features': '핵심 기능',
                 'nav.audience': '대상 사용자',
@@ -804,12 +910,52 @@
                 currentLangEl.textContent = langNames[lang];
             }
 
-            // Update page title and meta
-            document.title = lang === 'en' ? 'BoxCam - Package Camera' : 
-                           lang === 'ja' ? 'BoxCam - パッケージカメラ' :
-                           lang === 'ko' ? 'BoxCam - 패키지 카메라' :
-                           lang === 'zh-CN' ? 'BoxCam - 包裹相机' :
-                           'BoxCam - 包裹相機';
+            // Update page title
+            document.title = texts['meta.title'] || 'BoxCam - 包裹相機';
+
+            // Update meta description
+            let metaDesc = document.querySelector('meta[name="description"]');
+            if (metaDesc && texts['meta.description']) {
+                metaDesc.setAttribute('content', texts['meta.description']);
+            }
+
+            // Update meta keywords
+            let metaKeywords = document.querySelector('meta[name="keywords"]');
+            if (metaKeywords && texts['meta.keywords']) {
+                metaKeywords.setAttribute('content', texts['meta.keywords']);
+            }
+
+            // Update Open Graph tags
+            let ogTitle = document.querySelector('meta[property="og:title"]');
+            if (ogTitle && texts['meta.title']) {
+                ogTitle.setAttribute('content', texts['meta.title']);
+            }
+
+            let ogDesc = document.querySelector('meta[property="og:description"]');
+            if (ogDesc && texts['meta.description']) {
+                ogDesc.setAttribute('content', texts['meta.description']);
+            }
+
+            let ogLocale = document.querySelector('meta[property="og:locale"]');
+            if (ogLocale && texts['meta.og_locale']) {
+                ogLocale.setAttribute('content', texts['meta.og_locale']);
+            }
+
+            let ogUrl = document.querySelector('meta[property="og:url"]');
+            if (ogUrl) {
+                ogUrl.setAttribute('content', `https://ytingwu.github.io/boxcam/?lang=${lang}`);
+            }
+
+            // Update Twitter Card tags
+            let twitterTitle = document.querySelector('meta[name="twitter:title"]');
+            if (twitterTitle && texts['meta.title']) {
+                twitterTitle.setAttribute('content', texts['meta.title']);
+            }
+
+            let twitterDesc = document.querySelector('meta[name="twitter:description"]');
+            if (twitterDesc && texts['meta.description']) {
+                twitterDesc.setAttribute('content', texts['meta.description']);
+            }
 
             // Update html lang attribute
             document.documentElement.lang = lang;
