feat(analytics): add Google Analytics tracking code

--- a/boxcam/index.html
+++ b/boxcam/index.html
@@ -30,6 +30,16 @@
     <meta name="twitter:description" content="BoxCam 是專為電商賣家與網購族設計的錄影存證工具。掃碼自動錄影、智慧檔案管理、資料隱私自主。">
     <meta name="twitter:image" content="https://ytingwu.github.io/boxcam/LaunchLogo.png">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3LLNVV4WRZ"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3LLNVV4WRZ');
+    </script>
+
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
